# kryptology

./: .codeflow.yml  .gitignore  .golangci.yml  .spdx.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  go.mod  go.sum
cmd/benchcomp/: README.md  main.go  main_test.go
cmd/spdx/: Cargo.toml
cmd/spdx/src/: commands.rs  config.rs  main.rs
docs/: pull_request_template.md
internal/: README.md  hash.go  hash_test.go  testutils.go
pkg/accumulator/: README.md  accumulator.go  accumulator_test.go  key.go  key_test.go  lib.go  lib_test.go  proof.go  proof_test.go  witness.go  witness_test.go
pkg/bulletproof/: generators.go  generators_test.go  helpers.go  helpers_test.go  ipp_prover.go  ipp_prover_test.go  ipp_verifier.go  ipp_verifier_test.go  range_batch_prover.go  range_batch_prover_test.go  range_batch_verifier.go  range_batch_verifier_test.go  range_prover.go  range_prover_test.go  range_verifier.go  range_verifier_test.go
pkg/core/: README.md  commit_test.go  hash.go  hash_test.go  mod.go  mod_test.go
pkg/core/curves/: README.md  bls12377_curve.go  bls12377_curve_test.go  bls12381_curve.go  bls12381_curve_test.go  curve.go  ec_point.go  (+14 more)
pkg/dkg/: README.md  benchmarks.txt
pkg/paillier/: README.md  paillier.go  paillier_test.go  psf.go  psf_test.go
pkg/sharing/: README.md  ed25519_feldman_test.go  feldman.go  pedersen.go  polynomial.go  polynomial_test.go  shamir.go  shamir_test.go
pkg/signatures/bls/rust/: Cargo.toml  README.md
pkg/signatures/bls/rust/src/: main.rs
scripts/: perf-comp-local
test/: unmarshal_test.go
(+309 files in other folders)
